fixed up styling for html and css and aligned the content

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,29 +1,44 @@
 body {
-    background-color: #eff5f8
+    background: linear-gradient(0deg, rgb(254, 147, 25) 0%, rgb(255, 234, 0) 63%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    
   }
   
   button {
-    padding: 10px;
+    padding: 20px;
+    width: 200px;
     margin: 24px;
     cursor: pointer;
     font-size: 24px;
-    background-color: #247BA0;
+    background-color: #23e700;
     color: white;
+    border-radius: 25px;
   }
   
-  .container {
+  .content-container {
     display: block;
     margin: 80px auto;
     text-align: center;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    border: 5px solid rgb(17, 255, 0);
+    border-radius: 25px;
+    /* transition: 0.3s; */
     width: 60vw;
-    background-color: #f0ead6;
+    /* background-image: url("pexels-codioful-(formerly-gradienta)-6985001.jpg"); */
+    background-color: #ff9900;
   }
   
   .textarea {
     height: 50px;
-    margin-right: 30px;
+    align-items: center;
     font-size: 20px;
-    width: 60%;
+    width: 100%;
+  }
+
+  .header {
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
